index/index-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: index
spec:
  hosts:
  - "index.jukylin.com"
  gateways:
  - istio-autogenerated-k8s-ingress 
  http:
  - match:
    - uri:
        prefix: /index
    route:
    - destination:
        port:
          number: 8000
        host: index
